Add Cineplex Builder Info Message

--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       </div>
     </div>
 
+    <div id="cineplexbuilder" class="container">
+      <div class="alert alert-dismissible alert-info">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <h4 class="alert-heading"><span class="far fa-info-circle"></span> Have you tried the new Cineplex Builder?</h4>
+        <p>Fantasy Movie League now offers a what-if builder to help you make your weekly picks.</p>
+        <p>You weight each movie on how well you think they will do as compared to the estimates, and <a href="https://fantasymovieleague.com/cineplexbuilder" target="_blank">the Cineplex Builder <span class="fas fa-external-link fa-sm"></span></a> will tell you the optimal pick! Give it a try today.</p>
+      </div>
+    </div>
+
     <div id="standings" class="container">
       <div class="card text-white bg-secondary mb-3">
         <div class="card-header"><span class="far fa-list-ol fa-fw"></span> This Season's Standings</div>
