--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       </div>
     </div> -->
 
-    <!-- <div id="longweekend" class="container">
+    <div id="longweekend" class="container">
       <div class="alert alert-dismissible alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <h4 class="alert-heading">ALERT: MLK Day Weekend = 4 Days of Box Office!</h4>
-        <p>Please note that due to Monday being a holiday, it's four days of box office we'll be counting in FML this weekend!</p>
-        <p>This week's pick opens Tuesday. More information is available on <a href="https://fantasymovieleague.com/chatter/board/fml-main-chatter/topic/575471" target="_blank">the Fantasy Movie League website</a>.</p>
+        <h4 class="alert-heading">ALERT: 4-Day Box Office Weekend in FML!</h4>
+        <p>Presidents' Day is coming up on Monday, Feb 18th! So, for many people across the US, it's a long holiday weekend... and in FML, it means we have an extra day of box office!</p>
+        <p>This week's pick opens Tuesday. More information is available on <a href="https://fantasymovieleague.com/chatter/board/fml-main-chatter/topic/579688" target="_blank">the Fantasy Movie League website</a>.</p>
       </div>
-    </div> -->
+    </div>
 
     <div id="intro" class="container">
       <div class="jumbotron">
