--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
   <title>Hope College Unofficial Fantasy Movie League</title>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script defer src="//pro.fontawesome.com/releases/v5.6.3/js/all.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.23/moment-timezone-with-data-2012-2022.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment-duration-format/2.2.2/moment-duration-format.min.js"></script>
-  <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/4.2.1/sandstone/bootstrap.min.css" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/sandstone/bootstrap.min.css" rel="stylesheet">
 
   <style>
     @media screen and (min-width: 992px) {
@@ -121,14 +121,14 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       </div>
     </div> -->
 
-    <div id="longweekend" class="container">
+    <!-- <div id="longweekend" class="container">
       <div class="alert alert-dismissible alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <h4 class="alert-heading">ALERT: 4-Day Box Office Weekend in FML!</h4>
         <p>Presidents' Day is coming up on Monday, Feb 18th! So, for many people across the US, it's a long holiday weekend... and in FML, it means we have an extra day of box office!</p>
         <p>This week's pick opens Tuesday. More information is available on <a href="https://fantasymovieleague.com/chatter/board/fml-main-chatter/topic/579688" target="_blank">the Fantasy Movie League website</a>.</p>
       </div>
-    </div>
+    </div> -->
 
     <div id="intro" class="container">
       <div class="jumbotron">
@@ -248,7 +248,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       var nextOpen = moment().tz('America/Detroit').day(8).hour(20).minute(0).second(0).millisecond(0); // next Monday at 8pm eastern    
       var firstWeekOfFMLEver = moment('2015-04-21');
 
-      open = moment().tz('America/Detroit').day(2).hour(20).minute(0).second(0).millisecond(0); // override this week to Tuesday at 8pm eastern
+      // open = moment().tz('America/Detroit').day(2).hour(20).minute(0).second(0).millisecond(0); // override this week to Tuesday at 8pm eastern
 
       var lastWeeksStandingsUrl = "https://fantasymovieleague.com/league/35725?weekId=" + (now.diff(firstWeekOfFMLEver, 'weeks') - 1); // hope they don't change url schemes lol
       $('#lastWeeksStandings').attr('href', lastWeeksStandingsUrl);
