Tweak Invitation Text

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           <div class="alert alert-light alert-dismissible fade show">
             <h4 class="alert-heading">Join today!</h4>
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            This season may have already started, but you can still make an account. It's free, and fun!
+            This season is wrapping up, and now is the perfect time for you to join us. It's free, and fun!
           </div>
           <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://fantasymovieleague.com/league/35725?contestId=1&periodId=4#league-entries"></iframe>
