Add End of Season Alert

--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
         <p>This week's pick opens Tuesday. More information is available on <a href="https://fantasymovieleague.com/chatter/board/fml-main-chatter/topic/579688" target="_blank">the Fantasy Movie League website</a>.</p>
       </div>
     </div> -->
+    
+    
+    <div id="longweekend" class="container">
+      <div class="alert alert-dismissible alert-info">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <h4 class="alert-heading">Last week in Awards 2019 season!</h4>
+        <p>This weekend, Feb 22-24, is the final week of the first Fantasy Movie League season at Hope College.</p>
+        <p>If you haven't joined yet, now is the perfect time to get started and practice before the Spring season starts next week. <a href="https://fantasymovieleague.com/league/35725/join?mp=1ef67efbb1457367392e3a10572cb748" target="_blank">Join today</a>!</p>
+      </div>
+    </div>
 
     <div id="intro" class="container">
       <div class="jumbotron">
