Update FAQ About Winner Prize

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
           </p>
           <hr class="my-4">
           <h4 class="card-title">What do I win?</h4>
-          <p class="card-text">Glory? I'll definitely put your (appropriate) username and cinema name on this page. Maybe I'll come up with another prize too. I'm not sure yet.</p>
+          <p class="card-text">Glory! I'll definitely put your (appropriate) username and cinema name on this page. We also have a 3D Printed an Oscar <img height="24px" alt="Line drawing of an Oscar" src="oscar.svg" />, and we will add your username to the base when you win.</p>
           <hr class="my-4">
           <h4 class="card-title">How much does it cost?</h4>
           <p class="card-text">It's free! An account with <a class="text-primary" href="https://fantasymovieleague.com/aboutus" target="_blank">Fantasy Movie League</a> is all you need to play.</p>
