--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       <div class="alert alert-dismissible alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <h2><span class="far fa-medal fa-fw"></span> Congratulations <a href="https://fantasymovieleague.com/u/zaskeu" target="_blank">@Zaskeu</a>!</h2>
-        <h5><strong>Big Doink's Amish Theater</strong> is the winner of <a href="https://fantasymovieleague.com/league/35725?contestId=1&periodId=2" target="_blank">the 2019 Awards Season</a>! The trophy has been printed and is now being customized.</h5>
+        <h5><strong>Big Doink's Amish Theater</strong> is the winner of <a href="https://fantasymovieleague.com/league/35725?contestId=1&periodId=2" target="_blank">the 2019 Awards Season</a>! The trophy <img height="24px" alt="Line drawing of an Oscar" src="oscar-white.svg" /> has been printed and is now being customized.</h5>
         <hr />
         <h5>The Spring 2019 season is now open!</h5>
       </div>
