--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       <div class="alert alert-dismissible alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <h2><span class="far fa-medal fa-fw"></span> Congratulations <a href="https://fantasymovieleague.com/u/zaskeu" target="_blank">@Zaskeu</a>!</h2>
-        <h5><strong>Big Doink's Amish Theater</strong> is the winner of <a href="https://fantasymovieleague.com/league/35725?contestId=1&periodId=2" target="_blank">the 2019 Awards Season</a>! The trophy <img height="24px" alt="Line drawing of an Oscar" src="oscar-white.svg" /> has been printed and is now being customized.</h5>
+        <h5><strong>Big Doink's Amish Theater</strong> is the winner of <a href="https://fantasymovieleague.com/league/35725?contestId=1&periodId=2" target="_blank">the 2019 Awards Season</a>! The trophy <img height="24px" alt="Line drawing of an Oscar" src="oscar-white.svg" /> has been printed and delivered.</h5>
         <hr />
-        <h5>The Spring 2019 season is now open!</h5>
+        <h5>The Spring 2019 season is underway! Perhaps the trophy will be yours next?</h5>
       </div>
     </div>
 
@@ -177,11 +177,11 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
       <div class="card text-white bg-secondary mb-3">
         <div class="card-header"><span class="far fa-list-ol fa-fw"></span> This Season's Standings</div>
         <div class="card-body">
-          <div class="alert alert-light alert-dismissible fade show">
+<!--           <div class="alert alert-light alert-dismissible fade show">
             <h4 class="alert-heading">Join today!</h4>
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            The Spring 2019 has just begun. It's free, and fun!
-          </div>
+            The Spring 2019 is underway. It's free, and fun!
+          </div> -->
           <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://fantasymovieleague.com/league/35725?contestId=1&periodId=3#league-entries"></iframe>
           </div>
