--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
     <div id="lastseasonwinner" class="container">
       <div class="alert alert-dismissible alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <h2><span class="far fa-medal fa-fw"></span> Congratulations <a href="https://fantasymovieleague.com/u/zaskeu" target="_blank">@Zaskeu</a>!</h2>
-        <h5><strong>Big Doink's Amish Theater</strong> is the winner of <a href="https://fantasymovieleague.com/league/35725?contestId=1&periodId=2" target="_blank">the 2019 Awards Season</a>! The trophy <img height="24px" alt="Line drawing of an Oscar" src="oscar-white.svg" /> has been printed and delivered.</h5>
+        <h2><span class="far fa-medal fa-fw"></span> Congratulations <a href="https://fantasymovieleague.com/u/agentsmith630" target="_blank">@AgentSmith630</a>!</h2>
+        <h5><strong>Coming Soon to Netflix</strong> is the winner of <a href="https://fantasymovieleague.com/league/35725?contestId=1&periodId=3" target="_blank">the 2019 Spring Season</a>! The trophy <img height="24px" alt="Line drawing of an Oscar" src="oscar-white.svg" /> is being printed and delivered.</h5>
         <hr />
-        <h5>The Spring 2019 season is underway! Perhaps the trophy will be yours next?</h5>
+        <h5>The Summer 2019 season is underway! Perhaps the trophy will be yours next?</h5>
       </div>
     </div>
 
