--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ yM-  `hMMMMMMMMMMMMMMMMMmmMMMMMd/`          /MM+         oMy
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script defer src="//pro.fontawesome.com/releases/v5.8.2/js/all.js"></script>
+  <script defer src="//kit.fontawesome.com/e1f9a338b9.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.25/moment-timezone-with-data-2012-2022.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment-duration-format/2.2.2/moment-duration-format.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.26/moment-timezone-with-data-2012-2022.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment-duration-format/2.3.2/moment-duration-format.min.js"></script>
   <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/sandstone/bootstrap.min.css" rel="stylesheet">
 
   <style>
